# Rp2040-lvgl-1.14LCD

./: .gitignore  CMakeLists.txt  README.md  build.sh  xxx.txt
Module/ToyINA/: CMakeLists.txt
Module/ToyINA/include/ToyINA/: ina226.h
Module/ToyINA/src/: ina226.c
Module/ToyLCD/: CMakeLists.txt
Module/ToyLCD/include/ToyLCD/: fonts.h  gpt_st7789v.h
Module/ToyLCD/src/: font24.c  gpt_st7789v.c  lv_port_disp.c
ToyMain/: CMakeLists.txt
ToyMain/include/ToyMain/: ImageData.h  lv_conf.h  ticktock.h  tools.h
ToyMain/src/: main.c  tools.c
cmake/: lvgl_import.cmake
